--- a/MvcMovie/Views/HelloWorld/Index.cshtml
+++ b/MvcMovie/Views/HelloWorld/Index.cshtml
@@ -2,4 +2,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@{ 
+    ViewBag.Title = "Index";
+}
 
+<h2> Index </h2>
+<p> Hello from View Template </p>
